<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_nyp_background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:id="@+id/nypLogo"
        android:layout_width="389dp"
        android:layout_height="114dp"
        android:background="@android:color/white"
        android:gravity="left"
        android:src="@drawable/img_nyp_logo" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="906dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_password_background"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="27sp" />

    <CheckBox
        android:id="@+id/checkboxShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:buttonTint="#FFFFFF"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/show_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="246dp"
        android:layout_height="67dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_red_transparent"
        android:shadowColor="#80000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/continuate"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />
</LinearLayout>
