<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_nyp_background">

    <!-- Logo top left -->
    <ImageView
        android:id="@+id/nypLogo"
        android:layout_width="356dp"
        android:layout_height="108dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:contentDescription="@string/nyp_logo"
        android:scaleType="fitXY"
        android:src="@drawable/img_nyp_logo"
        tools:ignore="ContentDescription" />

    <!-- Main centered content -->
    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:paddingHorizontal="24dp">


    <LinearLayout
        android:id="@+id/slotsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
    <!-- Validation button -->
    <Button
        android:id="@+id/btnAddSlot"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@drawable/button_yellow_transparent"
        android:text="@string/add_new_time_slot"
        android:textSize="24sp"/>

    <!-- Validation button -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@drawable/button_turquoise_transparent"
        android:text="@string/validate_time"
        android:textSize="24sp"
        android:layout_marginTop="50dp"/>

    </LinearLayout>
</RelativeLayout>
