<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_nyp_background"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">


    <ImageView
        android:id="@+id/nypLogo"
        android:layout_width="345dp"
        android:layout_height="123dp"
        android:background="@android:color/white"
        android:contentDescription="@string/nyp_logo"
        android:gravity="left"
        android:src="@drawable/img_nyp_logo" />

    <TextView
        android:id="@+id/textSelectMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_first_page"
        android:padding="12dp"
        android:text="@string/welcome_please_select_the_mode_you_want_to_use"
        android:textSize="35sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="158dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_yellow_transparent"
            android:padding="12dp"
            android:text="@string/settings_mode"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/startButton"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_turquoise_transparent"
            android:padding="12dp"
            android:text="@string/start_patrolling"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>